# mysql-cli-rust

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: mod.rs  query.rs
src/completion/: engine.rs  engine_tests.rs  helper.rs  metadata.rs  mod.rs  suggestion.rs
src/database/: connection.rs  mod.rs
