[package]
name = "mysql-cli-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mysql = "24.0"
rustyline = { version = "13.0", features = ["with-file-history"] }
comfy-table = "7.0"
anyhow = "1.0"
rpassword = "7.0"
regex = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
